// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test core API test cssR test snapshot 1`] = `
@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

<button
  className="c0"
/>
`;

exports[`test core API test styleHOC test snapshot 1`] = `
.c0 {
  color: blue;
}

@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

<button
  className="c0"
  color="yellow"
/>
`;

exports[`test core API test styledR test snapshot 1`] = `
.c0 {
  color: blue;
}

@media (min-width:0px) {
  .c0 {
    color: red;
  }
}

@media (min-width:768px) and (max-width:1199.98px) {
  .c0 {
    color: yellow;
  }
}

<button
  className="c0"
  color="red"
/>
`;
